[package]
name = "tracing-etw"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/Robo210/tracing-etw"
rust-version = "1.68"
authors = ["Kyle Sabo", "Microsoft"]

[lib]
crate-type = ["rlib"]

[features]
unsafe = []
global_filter = []
default = []

[dependencies]
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version="0.3", default-features = false, features=["std", "fmt", "registry"]}
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
eventheader = "0.2"
eventheader_dynamic = "0.2"
chrono = {version="0.4", default-features = false, features=["std"]}

[dev-dependencies]
windows = {version="0.48", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
criterion = {version="0.5", features=["html_reports"]}
etw_helpers = {version="0.1", path="../etw_helpers"}

[[bench]]
name = "etw"
harness = false
