[package]
name = "tracing-etw"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/Robo210/tracing-etw"
rust-version = "1.68"
authors = ["Kyle Sabo", "Microsoft"]

[lib]
crate-type = ["rlib"]

[features]
global_filter = []
common_schema = []
default = ["common_schema"]

[dependencies]
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-core = {version = "0.1", default-features = false}
tracing-subscriber = {version="0.3", default-features = false, features=["std", "fmt", "registry"]}
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
eventheader = "0.3.1"
eventheader_dynamic = "0.3.1"
chrono = {version="0.4", default-features = false, features=["std"]}
once_cell = "1.18"
const_format = {version="0.2", features=["rust_1_64"]}
atoi = "2"
dashmap = "5.5"

[dev-dependencies]
criterion = {version="0.5", features=["html_reports"]}

[target.'cfg(windows)'.dev-dependencies]
windows = {version="0.48", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
etw_helpers = {version="0.1", path="../etw_helpers"}

[[bench]]
name = "etw"
harness = false

[[bench]]
name = "user_events"
harness = false
